# ApplicatorAI

./: .dockerignore  .gitignore  Coverletterv6.py  Dockerfile  LICENSE  Project Structure.txt  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  temp.py  test1.py
.github/: PULL_REQUEST_TEMPLATE.md
old Version/: Coverletter v2.py  Coverletter v3.py  Coverletter v4.py  Coverletterv6.py  Coverletterv7.py  Coverletterv8.py
src/: config.py
src/app/: app.py  applicator.py  cover_letter_app.py
src/data/resume_templates/: Modern_Compact.tex  default_resume.tex
src/ui/: components.py  event_handlers.py
src/utils/: job_extractor.py  web_crawler.py
src/utils/generators/: ai_mail_generator.py  chatbot_generator.py  cold_mail_generator.py  cover_letter_generator.py  cover_letter_to_pdf.py  job_application_qna.py  linkedin_dm_generator.py  referral_dm_generator.py  resume_builder.py  resume_processor.py
templates/: subhash_temp.tex
tools/: ColdMailGenerator.py  Crawler.py  JobApplicationQnA.py  LinkedInDMGenerator.py  ReferralDMGenerator.py  ResumeBuilder.py  coverLetterGenerator.py  pdfProcessing.py
ui/: components.py  event_handlers.py
